commented out unused code

--- a/src/main/resources/static/app/bets/view/bets.qualifier.html
+++ b/src/main/resources/static/app/bets/view/bets.qualifier.html
@@ -21,83 +21,104 @@
                 <th>Round of 16</th>
             </tr>
             <tr>
-                <td class="info">WINNER_GROUP_C<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info" rowspan="2">WINNER_ROS1<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td class="info" rowspan="2">WINNER_ROS3<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info">WINNER_GROUP_B<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td>Winner</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
             </tr>
             <tr>
-                <td class="info">RUNNER_UP_GROUP_D<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info" rowspan="3">WINNER_QF1<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">WINNER_GROUP_C<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info" rowspan="2">WINNER_ROS1<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
                 <td>&nbsp;</td>
-                <td class="info" rowspan="3">WINNER_QF3<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info">RUNNER_UP_GROUP_A<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td class="info" rowspan="2">WINNER_ROS3<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">WINNER_GROUP_B<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+            </tr>
+            <tr>
+                <td class="info">RUNNER_UP_GROUP_D<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info" rowspan="3">WINNER_QF1<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td>&nbsp;</td>
+                <td class="info" rowspan="3">WINNER_QF3<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">RUNNER_UP_GROUP_A<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
             </tr>
             <tr>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td class="info" rowspan="7">
                     WINNER_SF1
+                    <br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select>
+                    <br>
                     WINNER_SF2
-                    <select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                    <br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select>
+                </td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
             </tr>
             <tr>
-                <td class="info">WINNER_GROUP_A<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info" rowspan="2">WINNER_ROS2<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info" rowspan="2">WINNER_ROS4<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info">WINNER_GROUP_D<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">WINNER_GROUP_A<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info" rowspan="2">WINNER_ROS2<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info" rowspan="2">WINNER_ROS4<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">WINNER_GROUP_D<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
             </tr>
             <tr>
-                <td class="info">RUNNER_UP_GROUP_B<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">RUNNER_UP_GROUP_B<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td class="info">RUNNER_UP_GROUP_C<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-            </tr>
-            <tr>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-            </tr>
-            <tr>
-                <td class="info">WINNER_GROUP_E<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info" rowspan="2">WINNER_ROS5<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td class="info" rowspan="2">WINNER_ROS7<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info">WINNER_GROUP_F<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-            </tr>
-            <tr>
-                <td class="info">RUNNER_UP_GROUP_F<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info" rowspan="3">WINNER_QF2<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info" rowspan="3">WINNER_QF4<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info">RUNNER_UP_GROUP_E<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">RUNNER_UP_GROUP_C<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
             </tr>
             <tr>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
+                <td>&nbsp;</td>
             </tr>
             <tr>
-                <td class="info">WINNER_GROUP_G<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info" rowspan="2">WINNER_ROS6<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">WINNER_GROUP_E<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info" rowspan="2">WINNER_ROS5<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
                 <td>&nbsp;</td>
-                <td class="info" rowspan="2">WINNER_ROS8<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
-                <td class="info">WINNER_GROUP_H<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td>&nbsp;</td>
+                <td class="info" rowspan="2">WINNER_ROS7<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">WINNER_GROUP_F<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
             </tr>
             <tr>
-                <td class="info">RUNNER_UP_GROUP_H<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">RUNNER_UP_GROUP_F<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info" rowspan="3">WINNER_QF2<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info" rowspan="3">WINNER_QF4<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">RUNNER_UP_GROUP_E<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+            </tr>
+            <tr>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
-                <td class="info">RUNNER_UP_GROUP_G<select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td>&nbsp;</td>
+            </tr>
+            <tr>
+                <td class="info">WINNER_GROUP_G<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info" rowspan="2">WINNER_ROS6<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td>&nbsp;</td>
+                <td class="info" rowspan="2">WINNER_ROS8<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td class="info">WINNER_GROUP_H<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+            </tr>
+            <tr>
+                <td class="info">RUNNER_UP_GROUP_H<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td class="info">RUNNER_UP_GROUP_G<br><select style="width: 80px;font-size: 20px;"><option data-ng-repeat="i in [1,2,3,4,5]">{{i}}</option></select></td>
+            </tr>
+            <tr>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>Third Place</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
             </tr>
             <tr>
                 <th>Round of 16</th>
