--- a/src/main/resources/static/app/directives/view/match.template.html
+++ b/src/main/resources/static/app/directives/view/match.template.html
@@ -16,7 +16,7 @@
         </td>
         <td class="col-md-2">&nbsp;</td>
         <td class="col-md-1" id="match-{{match.matchId}}-link">
-            <a permission="['ROLE_USER']" ui-sref="bets.matches({matchId: match.matchId})">Go to bet</a>
+            <match-links data="match"/>
         </td>
     </tr>
     </tbody>
