changed background add flags to qualifiers remove qualifier in bet second stage

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -6,7 +6,7 @@ html {
 body {
     min-height: 500px;
     padding-top: 80px;
-    background: #fff url(/images/bg.jpg) repeat-x center 0;
+    background: #fff url(/images/grass_bg.jpg) repeat-x center 0;
 }
 
 .main {
@@ -18,6 +18,11 @@ body {
     vertical-align: middle;
 }
 
+.navbar {
+    background: #fff url(/images/header_bg.png) repeat-x center 0;
+}
+
+
 .navbar-fixed-top {
     min-height: 60px;
 }
@@ -26,10 +31,17 @@ body {
     padding-top: 0px;
     padding-bottom: 0px;
     line-height: 60px;
+    color: white;
+    font-weight: bold;
 }
+
 
 .navbar-brand {
     line-height: 33px;
+}
+
+.navbar-brand .logo{
+    margin-top: -26px;
 }
 
 @media (max-width: 767px) {
@@ -76,4 +88,17 @@ body {
     color: #fff;
 }
 
+.qualifiers-container {
+    font-size: 11px;
+}
 
+#qualifiers-container select {
+    width: 120px;
+    height: 34px;
+    padding: 5px 5px 5px 5px;
+    font-size: 14px;
+    border: 1px solid #ccc;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    /*background: no-repeat 96% / 15%;*/
+}
