--- a/src/main/resources/static/app/bets/view/bets.matches.html
+++ b/src/main/resources/static/app/bets/view/bets.matches.html
@@ -70,8 +70,7 @@
                                        id="homeTeamGoals"
                                        placeholder="Enter score"
                                        ng-model="userBet.homeTeamGoals"
-                                       size="3"
-                                       ng-change="onGoalsChanged()">
+                                       size="3">
                             </td>
                             <td class="col-md-1 text-center">:</td>
                             <td class="col-md-1 text-center">
@@ -81,8 +80,7 @@
                                        id="awayTeamGoals"
                                        placeholder="Enter score"
                                        ng-model="userBet.awayTeamGoals"
-                                       size="3"
-                                       ng-change="onGoalsChanged()">
+                                       size="3">
                             </td>
                         </tr>
                         </tbody>
@@ -90,12 +88,14 @@
                     </div>
                 </div>
 
+                <!--
                 <div class="form-group" ng-show="selected.bet.stageId != 'GROUP'">
                     <label class="control-label col-sm-2" for="machtQualifier">Match qualifier:</label>
                     <div class="col-sm-10">
                         <select id="machtQualifier" class="form-control" ng-model="userBet.matchQualifier" ng-options="x for x in options.matchQualifier"></select>
                     </div>
                 </div>
+                -->
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
