--- a/src/main/resources/static/app/bets/view/bets.matches.html
+++ b/src/main/resources/static/app/bets/view/bets.matches.html
@@ -6,6 +6,7 @@
         <div class="panel-heading">Select game panel</div>
         <div class="panel-body">
             <form class="form-horizontal" action="">
+
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="firstStageMatchesList">First Stage Matches:</label>
                     <div class="col-sm-10">
@@ -17,17 +18,6 @@
                     </div>
                 </div>
 
-                <!--
-                <div class="form-group">
-                    <label class="control-label col-sm-2">Qualifiers:</label>
-                    <div class="col-sm-10">
-                        <div ng-repeat="(key, value) in matchesData.qualifiers">
-                            <strong>{{key}}</strong>
-                            <div ng-repeat="qualifier in value"><team data="qualifier.team"></team> ({{qualifier.knockoutTeamCode}})</div>
-                        </div>
-                    </div>
-                </div>
-                -->
                 <div class="form-group">
                     <label class="control-label col-sm-2" for="secondStageMatchesList">Second Stage Matches:</label>
                     <div class="col-sm-10">
@@ -48,11 +38,17 @@
         <div class="panel-body">
 
             <form class="form-horizontal" data-ng-submit="postUserBet()" >
+
                 <div class="form-group" ng-hide="true">
                     <label class="control-label col-sm-2" for="machtId">Match Id:</label>
                     <div class="col-sm-10">
                         <p class="form-control-static" id="machtId" ng-model="userBet.matchId"></p>
                     </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-2">Kickoff:</label>
+                    <div class="col-sm-10">{{selected.match.kickoff | date : 'MMM d, HH:mm a' }}</div>
                 </div>
 
                 <div class="form-group">
@@ -88,14 +84,6 @@
                     </div>
                 </div>
 
-                <!--
-                <div class="form-group" ng-show="selected.bet.stageId != 'GROUP'">
-                    <label class="control-label col-sm-2" for="machtQualifier">Match qualifier:</label>
-                    <div class="col-sm-10">
-                        <select id="machtQualifier" class="form-control" ng-model="userBet.matchQualifier" ng-options="x for x in options.matchQualifier"></select>
-                    </div>
-                </div>
-                -->
 
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
