--- a/src/main/resources/static/app/directives/view/match.template.html
+++ b/src/main/resources/static/app/directives/view/match.template.html
@@ -3,7 +3,7 @@
     <tr ng-repeat="match in matches | orderBy: 'kickoff'">
         <td class="col-md-1">
             <div><b>{{match.stage}}</b></div>
-            <div>{{match.kickoff | date : 'MMM d, h:mm a'}}</div>
+            <div>{{match.kickoff | date : 'MMM d, HH:mm a'}}</div>
         </td>
         <td class="col-md-2">
             <h4><team data="match.homeTeam"/></h4>
