--- a/src/main/resources/static/app/games/view/games.secondstage.html
+++ b/src/main/resources/static/app/games/view/games.secondstage.html
@@ -34,11 +34,9 @@
 
             <td class="round_column r_2 final">
 
-                <div class="winner_team">
-                    <span>WINNER
-                        <a href="/#/">
+                <div class="winner_team">WINNER
+                    <span>
                         <team data="matches.finalWinner"/>
-                        </a>
                     </span>
                 </div>
 
