--- a/src/main/resources/static/app/bets/view/bets.overview.html
+++ b/src/main/resources/static/app/bets/view/bets.overview.html
@@ -2,87 +2,89 @@
 
     <div class="jumbotron">
         <h2>Your bets overview</h2>
-        <p></p>
 
-        <h2>Match Bets</h2>
-        <table class="table table-hover table-condensed">
-            <thead>
-            <tr>
-                <th>#</th>
-                <th scope="col" colspan="3">Match</th>
-                <th scope="col">Stage Id</th>
-                <th scope="col">Result</th>
-                <th scope="col">Bet</th>
-                <th scope="col">Points</th>
-                <th scope="col">&nbsp;</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="data in overviewData.match">
-                <td title="Kickoff at {{data.match.kickoff | date : 'MMM d, h:mm a'}}">{{data.match.matchId}}</td>
-                <td>
+        <uib-tabset active="active" justified="true">
+            <uib-tab index="0" heading="Match Bets">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th scope="col" colspan="3">Match</th>
+                        <th scope="col">Stage Id</th>
+                        <th scope="col">Result</th>
+                        <th scope="col">Bet</th>
+                        <th scope="col">Points</th>
+                        <th scope="col">&nbsp;</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="data in overviewData.match">
+                        <td title="Kickoff at {{data.match.kickoff | date : 'MMM d, h:mm a'}}">{{data.match.matchId}}</td>
+                        <td>
                     <span ng-switch="data.match.homeTeam || '_undefined_'" >
                         <span ng-switch-when="_undefined_">{{data.match.homeTeamCode}}</span>
                         <span ng-switch-default><team data="data.match.homeTeam"/></span>
                     </span>
-                </td>
-                <td> vs </td>
-                <td>
+                        </td>
+                        <td> vs </td>
+                        <td>
                     <span ng-switch="data.match.awayTeam || '_undefined_'" >
                         <span ng-switch-when="_undefined_">{{data.match.awayTeamCode}}</span>
                         <span ng-switch-default><team data="data.match.awayTeam"/></span>
                     </span>
-                </td>
-                <td>{{data.match.stageId}}</td>
-                <td>
+                        </td>
+                        <td>{{data.match.stageId}}</td>
+                        <td>
                     <span ng-switch="data.matchResult || '_undefined_'" >
                         <span ng-switch-when="_undefined_">NA</span>
                         <span ng-switch-default>{{data.matchResult.homeTeamGoals}} : {{data.matchResult.awayTeamGoals}}</span>
                     </span>
-                </td>
-                <td>
+                        </td>
+                        <td>
                     <span ng-switch="data.calculatedUserBet.userBet || '_undefined_'" >
                         <span ng-switch-when="_undefined_">NA</span>
                         <span ng-switch-default>{{data.calculatedUserBet.userBet.homeTeamGoals}} : {{data.calculatedUserBet.userBet.awayTeamGoals}}</span>
                     </span>
-                </td>
-                <td>{{data.calculatedUserBet.totalPoints}}</td>
-                <td>
-                    <match-links data="data.match"/>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+                        </td>
+                        <td>{{data.calculatedUserBet.totalPoints}}</td>
+                        <td>
+                            <match-links data="data.match"/>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </uib-tab>
 
-        <h2>Qualifiers Bets</h2>
-        <table class="table table-hover table-condensed">
-            <thead>
-            <tr>
-                <th>#</th>
-                <th scope="col">Qualifier</th>
-                <th scope="col">Stage</th>
-                <th scope="col">Lock Timed</th>
-                <th scope="col">Correct Qualifier</th>
-                <th scope="col">Points</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="data in overviewData.qualifier">
-                <td>{{data.bet.id}}</td>
-                <td>
+            <uib-tab index="1" heading="Qualifiers Bets">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th>#</th>
+                        <th scope="col">Qualifier</th>
+                        <th scope="col">Stage</th>
+                        <th scope="col">Lock Timed</th>
+                        <th scope="col">Correct Qualifier</th>
+                        <th scope="col">Points</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr ng-repeat="data in overviewData.qualifier">
+                        <td>{{data.bet.id}}</td>
+                        <td>
                     <span ng-switch="data.calculatedUserBet.userBet.qualifier || '_undefined_'" >
                         <span ng-switch-when="_undefined_">{{data.bet.description}}</span>
                         <span ng-switch-default><team data="data.calculatedUserBet.userBet.qualifier"/></span>
                     </span>
-                </td>
-                <td>{{data.bet.stageId}}</td>
-                <td>{{data.bet.lockTime | date : 'MMM d, h:mm a'}}</td>
-                <td>{{data.calculatedUserBet.isCorrectQualifier}}</td>
-                <td>{{data.calculatedUserBet.totalPoints}}</td>
-            </tr>
-            </tbody>
-        </table>
-
+                        </td>
+                        <td>{{data.bet.stageId}}</td>
+                        <td>{{data.bet.lockTime | date : 'MMM d, h:mm a'}}</td>
+                        <td>{{data.calculatedUserBet.isCorrectQualifier}}</td>
+                        <td>{{data.calculatedUserBet.totalPoints}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </uib-tab>
+        </uib-tabset>
     </div>
 
 </section>
