--- a/src/main/resources/static/app/directives/view/match.template.html
+++ b/src/main/resources/static/app/directives/view/match.template.html
@@ -1,9 +1,9 @@
-<table class="table table-hover table-striped table-condensed">
+<table class="table table-hover table-striped table-bordered">
     <tbody>
     <tr ng-repeat="match in matches | orderBy: 'kickoff'">
         <td class="col-md-1">
             <div><b>{{match.stage}}</b></div>
-            <div>{{match.kickoff | date : 'MMM d, HH:mm a'}}</div>
+            <div>{{match.kickoff | date : 'MMM d, HH:mm'}}</div>
         </td>
         <td class="col-md-2">
             <h4><team data="match.homeTeam"/></h4>
@@ -14,8 +14,7 @@
         <td class="col-md-2">
             <h4><team data="match.awayTeam"/></h4>
         </td>
-        <td class="col-md-2">&nbsp;</td>
-        <td class="col-md-1" id="match-{{match.matchId}}-link">
+        <td class="col-md-2 text-right" id="match-{{match.matchId}}-link">
             <match-links data="match"/>
         </td>
     </tr>
