--- a/src/main/resources/static/app/bets/view/bets.matches.html
+++ b/src/main/resources/static/app/bets/view/bets.matches.html
@@ -46,7 +46,9 @@
                 </div>
                 <div class="form-group">
                     <label class="control-label col-sm-2">Kickoff:</label>
-                    <div class="col-sm-10">{{selected.match.kickoff | date : 'MMM d, HH:mm a' }}</div>
+                    <div class="col-sm-10">
+                        <p class="form-control-static">{{selected.match.kickoff | date : 'MMM d, HH:mm' }}</p>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label class="control-label col-sm-2">Match:</label>
